--- a/app/src/main/res/layout/notes_item.xml
+++ b/app/src/main/res/layout/notes_item.xml
@@ -2,25 +2,54 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="8dp"
     android:layout_margin="8dp"
-    android:background="@drawable/notes">
+    app:background="@drawable/notes">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        >
+
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="3dp"
+            android:textColor="@color/primary"
+            android:text="Title"
+            android:minHeight="48dp"
+            android:padding="5dp"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/pinIcon"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/ic_pin"
+            android:visibility="gone" />
+    </LinearLayout>
+
     <TextView
-        android:id="@+id/tvTitle"
+        android:id="@+id/tvCategory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="3dp"
-       android:textColor="@color/primary"
-        android:text="title"
+        android:textColor="@color/primary"
+        android:text="Category"
         android:minHeight="48dp"
         android:padding="5dp"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        />
+        android:textSize="14sp"
+        android:textStyle="italic" />
 
-    <!-- Note Content Input -->
     <TextView
         android:id="@+id/tvContent"
         android:layout_width="match_parent"
@@ -31,5 +60,5 @@
         android:gravity="top"
         android:textColor="@color/primary"
         android:textSize="16sp"
-        android:layout_marginBottom="5dp"/>
+        android:layout_marginBottom="5dp" />
 </LinearLayout>
