--- a/app/src/main/res/layout/account.xml
+++ b/app/src/main/res/layout/account.xml
@@ -14,7 +14,7 @@
         android:minHeight="50dp"
         android:minWidth="50dp"
         android:scaleType="fitXY"
-        android:src="@drawable/cross"
+        android:src="@drawable/back"
         android:background="@color/background"
         app:tint="@color/accent2"
         android:layout_marginTop="40dp"
