--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,20 +13,13 @@
         android:layout_height="wrap_content"
         android:text="TrackNote"
         android:textSize="40sp"
+        android:padding="80dp"
         android:textColor="@color/primary"
         android:layout_gravity="center"
 
         android:textStyle="bold"/>
 
-    <com.airbnb.lottie.LottieAnimationView
-        android:layout_width="200dp"
-        android:layout_height="254dp"
-        android:layout_gravity="center"
-        android:scaleType="fitXY"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
-        app:lottie_rawRes="@raw/notebook"
-        android:visibility="gone"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
