--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,21 +13,12 @@
         android:text="TrackNote"
         android:textSize="40sp"
         android:textStyle="bold"
+        android:padding="80dp"
         android:textColor="@color/accent"
         android:layout_gravity="center"
 
         />
 
-    <com.airbnb.lottie.LottieAnimationView
-        android:layout_width="200dp"
-        android:layout_height="176dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="5dp"
-        android:scaleType="fitXY"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
-        app:lottie_rawRes="@raw/notebook"
-        android:visibility="gone"/>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
