--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -49,7 +49,6 @@
             android:id="@+id/searchBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:iconifiedByDefault="true"
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:queryHint="Search notes"
@@ -59,18 +58,24 @@
             android:layout_marginBottom="8dp"
             android:layout_marginStart="4dp"
             android:layout_marginEnd="4dp"
+            android:iconifiedByDefault="false"
             tools:ignore="MissingClass" />
         <AutoCompleteTextView
             android:id="@+id/etFilterCategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:minHeight="50dp"
             android:hint="Filter by Category"
             android:padding="8dp"
             android:layout_margin="8dp"
             android:background="@drawable/notes"
             android:inputType="text"/>
 
-
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvSmartFolders"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" />
 
         <!-- My Notes Section -->
     <TextView
