--- a/app/src/main/res/layout/add_note.xml
+++ b/app/src/main/res/layout/add_note.xml
@@ -101,7 +101,7 @@
                 android:background="@null"
                 android:padding="5dp"
                 android:layout_gravity="center"
-                app:tint="@color/accent2"
+                app:tint="@color/primary"
                 />
 
             <ImageButton
@@ -112,7 +112,7 @@
                 android:src="@drawable/italic"
                 android:background="@null"
                 android:layout_gravity="center"
-                app:tint="@color/accent2"
+                app:tint="@color/primary"
                 />
 
             <ImageButton
@@ -123,7 +123,7 @@
                 android:src="@drawable/underline"
                 android:background="@null"
                 android:layout_gravity="center"
-                app:tint="@color/accent2"
+                app:tint="@color/primary"
                 />
         </LinearLayout>
 
